# dookie

./: Cargo.toml  README.md  dookie.proto  flake.nix
cli_client/: Cargo.toml  build.rs
cli_client/src/: main.rs
server/: Cargo.toml
server/src/: client.rs  config.rs  discord_bot.rs  job.rs  lib.rs  listener.rs  logging.rs  main.rs
server/src/discord_bot/: discord_bot.rs  mod.rs
server/src/discord_bot/commands/: grant_access.rs  mod.rs
server/src/media_bundle/: mod.rs  plex.rs  qbit.rs  radarr.rs
server/test_data/: movies_metadata.json  session_history.json  shows_metadata.json
src/: config.rs  job.rs  lib.rs  main.rs
