[workspace]
members = [
  "server",
  "cli_client"
]
resolver = "2"
metadata = { workspace_root = "." }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
axum = "0.7.2"
num_cpus = "1.16.0"
serde = { version = "1.0.193", features = ["derive"] }
serde_yaml = "0.9.29"
serial_test = "2.0.0"
structopt = "0.3.26"
sysinfo = "0.30.1"
tokio = { version = "1.35.0", features = ["full"] }
confy = "0.5.1"
prost = "0.12"
prost-build = "0.12"
cargo_metadata = "0.18"
async-trait = "0.1"
